--- a/backend/package.json
+++ b/backend/package.json
@@ -8,9 +8,11 @@
         "start": "node server"
     },
     "dependencies": {
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
+        "jimp": "^0.16.1",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.1.2",
         "twilio": "^3.71.3"
